--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
-# If you prefer the allow list template instead of the deny list, see community template:
-# https://github.com/github/gitignore/blob/main/community/Golang/Go.AllowList.gitignore
+#### Git ignore for Python
+*__pycache__
+### Git ignore for Golang
 #
 # Binaries for programs and plugins
 *.exe
